--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ rust_decimal = "1.26.1"
 serde = {version = "1.0.147", features = ["serde_derive"]}
 tokio = { version = "1.21.2", features = ["full"] }
 chrono = { version = "0.4.23", features = ["serde"] }
+async-trait = "0.1.58"
+serde-xml-rs = "0.6.0"
+derive_builder = { version = "0.11.2", features = ["clippy"] }
