--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1.21.2", features = ["full"] }
 chrono = { version = "0.4.23", features = ["serde"] }
 serde-xml-rs = "0.6.0"
 derive_builder = { version = "0.12.0", features = ["clippy"] }
+color-eyre = "0.6.2"
